--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,10 @@
 body {
 	background-color: #80ffff;
+	margin: 0px;
+	border: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 100%;
 }
 
 div {
@@ -10,34 +15,34 @@ div {
 /* size */
 
 .size {
-height: 5.5vw;
-width: 5.5vw;
-margin: 1px;
+	height: calc((100vw / 17) - 2px);
+	width: calc((100vw / 17) - 2px);
+	margin: 1px;
 }
 
 
 /* color */
 
 .blue {
-background-color: #b3ffff;
-background: -webkit-radial-gradient(white, #b3ffff, white);
+	background-color: #b3ffff;
+	background: -webkit-radial-gradient(white, #b3ffff, white);
 }
 
 .white {
-background-color: white;
+	background-color: white;
 }
 
 /* shape */
 
 .circle {
-border-radius: 100%;
-z-index:1;
+	border-radius: 100%;
+	z-index:1;
 }
 
 .star {
--webkit-clip-path: polygon(37% 10%, 38% 30%, 11% 24%, 35% 45%, 8% 49%, 35% 56%, 17% 71%, 36% 68%, 32% 93%, 49% 70%, 65% 96%, 65% 71%, 80% 81%, 69% 59%, 95% 64%, 72% 50%, 93% 35%, 74% 35%, 84% 21%, 63% 31%, 70% 3%, 51% 32%);
-clip-path: polygon(37% 10%, 38% 30%, 11% 24%, 35% 45%, 8% 49%, 35% 56%, 17% 71%, 36% 68%, 32% 93%, 49% 70%, 65% 96%, 65% 71%, 80% 81%, 69% 59%, 95% 64%, 72% 50%, 93% 35%, 74% 35%, 84% 21%, 63% 31%, 70% 3%, 51% 32%);
-z-index:2;
+	-webkit-clip-path: polygon(37% 10%, 38% 30%, 11% 24%, 35% 45%, 8% 49%, 35% 56%, 17% 71%, 36% 68%, 32% 93%, 49% 70%, 65% 96%, 65% 71%, 80% 81%, 69% 59%, 95% 64%, 72% 50%, 93% 35%, 74% 35%, 84% 21%, 63% 31%, 70% 3%, 51% 32%);
+	clip-path: polygon(37% 10%, 38% 30%, 11% 24%, 35% 45%, 8% 49%, 35% 56%, 17% 71%, 36% 68%, 32% 93%, 49% 70%, 65% 96%, 65% 71%, 80% 81%, 69% 59%, 95% 64%, 72% 50%, 93% 35%, 74% 35%, 84% 21%, 63% 31%, 70% 3%, 51% 32%);
+	z-index:2;
 }
 
 
