--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
 	padding: 0px;
 	width: 100%;
 	height: 100%;
+	font-family: Roboto Condensed;
 }
 
 div {
@@ -45,4 +46,24 @@ div {
 	z-index:2;
 }
 
+.snark {
+	text-align: center;
+	font-family:Arial;
+	font-size: 95px;
+	color:#cc0000;
+	background-color: #ffb3b3;
+	width: 100%;
+	height:100%;
+	font-family: Roboto Condensed;
+}
 
+.congrats {
+	text-align: center;
+	font-family:Garamond;
+	font-size: 95px;
+	color:#29a329;
+	background-color: #85e085;
+	width: 100%;
+	height:100%;
+	font-family: Roboto Condensed;
+}
